# raster-rise

./: .clang-format  .gitattributes  .gitignore  README.md  meson.build
include/: camera.hpp  primitives.hpp  renderer.hpp
include/types/: color.hpp  frame_buffer.hpp  matrix.hpp  model.hpp  object.hpp  transform.hpp  vec.hpp  vec3.hpp  vec4.hpp  z_buffer.hpp
include/utils/: colors.hpp  timer.hpp
scripts/: gen_sources.py
src/: camera.cpp  main.cpp  meson.build  primitives.cpp  renderer.cpp
src/types/: frame_buffer.cpp  meson.build  model.cpp  object.cpp  vec3.cpp  vec4.cpp
